--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-icons": "^4.10.1",
+    "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.14.2",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0"
