--- a/package.json
+++ b/package.json
@@ -10,15 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "firebase": "^10.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.14.2",
+    "react-spinners": "^0.13.8",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0"
   },
