--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "firebase": "^10.1.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
@@ -18,12 +19,12 @@
     "react-dom": "^18.2.0",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.4",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
     "react-router-dom": "^6.14.2",
-    "react-tabs": "^6.0.2",
-    "react-hot-toast": "^2.4.1",
     "react-spinners": "^0.13.8",
+    "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
     "swiper": "^10.1.0"
   },
