--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.32.6",
     "axios": "^1.4.0",
     "firebase": "^10.1.0",
@@ -23,6 +24,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
+    "react-redux": "^8.1.2",
     "react-router-dom": "^6.14.2",
     "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.2",
