--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.2",
     "sort-by": "^1.2.0",
+    "sweetalert2": "^11.7.27",
     "swiper": "^10.1.0"
   },
   "devDependencies": {
