--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
+    "react-lottie": "^1.2.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
