--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
     "react-lottie": "^1.2.3",
+    "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
