--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^1.9.5",
+    "@smastrom/react-rating": "^1.3.2",
     "@tanstack/react-query": "^4.32.6",
     "aos": "^2.3.4",
     "axios": "^1.4.0",
