--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "^18.2.0",
     "react-countup": "^6.4.2",
     "react-dom": "^18.2.0",
+    "react-google-maps": "^9.4.5",
     "react-helmet-async": "^1.3.0",
     "react-hook-form": "^7.45.4",
     "react-hot-toast": "^2.4.1",
