--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
     "react-lottie": "^1.2.3",
+    "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
