--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.10.1",
     "react-id-swiper": "^4.0.0",
+    "react-input-emoji": "^5.5.1",
     "react-lottie": "^1.2.3",
     "react-modal": "^3.16.1",
     "react-quill": "^2.0.0",
@@ -46,9 +47,11 @@
     "react-router-dom": "^6.15.0",
     "react-spinners": "^0.13.8",
     "react-tabs": "^6.0.2",
+    "socket.io-client": "^4.7.2",
     "sort-by": "^1.2.0",
     "sweetalert2": "^11.7.27",
-    "swiper": "^10.1.0"
+    "swiper": "^10.1.0",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@iconify/react": "^4.1.1",
