--- a/package.json
+++ b/package.json
@@ -1,77 +1,1 @@
-{ 
-  "name": "chemistry-corner",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview",
-    "test": "vitest",
-    "coverage": "vitest run --coverage"
-  },
-  "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.14.7",
-    "@reduxjs/toolkit": "^1.9.5",
-    "@smastrom/react-rating": "^1.3.2",
-    "@tanstack/react-query": "^4.32.6",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "aos": "^2.3.4",
-    "apexcharts": "^3.42.0",
-    "axios": "^1.4.0",
-    "classnames": "^2.3.2",
-    "firebase": "^10.1.0",
-    "jsdom": "^22.1.0",
-    "localforage": "^1.10.0",
-    "match-sorter": "^6.3.1",
-    "moment": "^2.29.4",
-    "react": "^18.2.0",
-    "react-apexcharts": "^1.4.1",
-    "react-countup": "^6.4.2",
-    "react-dom": "^18.2.0",
-    "react-google-maps": "^9.4.5",
-    "react-helmet-async": "^1.3.0",
-    "react-hook-form": "^7.45.4",
-    "react-hot-toast": "^2.4.1",
-    "react-icons": "^4.10.1",
-    "react-id-swiper": "^4.0.0",
-    "react-input-emoji": "^5.5.1",
-    "react-lottie": "^1.2.3",
-    "react-modal": "^3.16.1",
-    "react-quill": "^2.0.0",
-    "react-redux": "^8.1.2",
-    "react-router-dom": "^6.15.0",
-    "react-spinners": "^0.13.8",
-    "react-tabs": "^6.0.2",
-    "socket.io-client": "^4.7.2",
-    "sort-by": "^1.2.0",
-    "sweetalert2": "^11.7.27",
-    "swiper": "^10.1.0",
-    "timeago.js": "^4.0.2"
-  },
-  "devDependencies": {
-    "@iconify/react": "^4.1.1",
-    "@testing-library/jest-dom": "^6.1.3",
-    "@testing-library/react": "^14.0.0",
-    "@testing-library/user-event": "^14.4.3",
-    "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
-    "@vitejs/plugin-react": "^4.0.3",
-    "autoprefixer": "^10.4.14",
-    "daisyui": "^3.5.1",
-    "eslint": "^8.45.0",
-    "eslint-plugin-react": "^7.32.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.3",
-    "jest": "^29.6.4",
-    "jsdom": "^22.1.0",
-    "postcss": "^8.4.27",
-    "tailwindcss": "^3.3.3",
-    "vite": "^4.4.5",
-    "vitest": "^0.34.4"
-  }
-}
+{"name":"chemistry-corner","private":true,"version":"0.0.0","type":"module","scripts":{"dev":"vite","build":"vite build","lint":"eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0","preview":"vite preview","test":"vitest","coverage":"vitest run --coverage"},"dependencies":{"@emotion/react":"^11.11.1","@emotion/styled":"^11.11.0","@mui/material":"^5.14.7","@reduxjs/toolkit":"^1.9.5","@smastrom/react-rating":"^1.3.2","@tanstack/react-query":"^4.32.6","@testing-library/jest-dom":"^6.1.3","@testing-library/react":"^14.0.0","aos":"^2.3.4","apexcharts":"^3.42.0","axios":"^1.4.0","classnames":"^2.3.2","firebase":"^10.1.0","jsdom":"^22.1.0","localforage":"^1.10.0","match-sorter":"^6.3.1","moment":"^2.29.4","multiselect-react-dropdown":"^2.0.25","react":"^18.2.0","react-apexcharts":"^1.4.1","react-countup":"^6.4.2","react-dom":"^18.2.0","react-google-maps":"^9.4.5","react-helmet-async":"^1.3.0","react-hook-form":"^7.45.4","react-hot-toast":"^2.4.1","react-icons":"^4.10.1","react-id-swiper":"^4.0.0","react-input-emoji":"^5.5.1","react-lottie":"^1.2.3","react-modal":"^3.16.1","react-quill":"^2.0.0","react-redux":"^8.1.2","react-router-dom":"^6.15.0","react-spinners":"^0.13.8","react-tabs":"^6.0.2","socket.io-client":"^4.7.2","sort-by":"^1.2.0","sweetalert2":"^11.7.27","swiper":"^10.1.0","timeago.js":"^4.0.2"},"devDependencies":{"@iconify/react":"^4.1.1","@testing-library/jest-dom":"^6.1.3","@testing-library/react":"^14.0.0","@testing-library/user-event":"^14.4.3","@types/react":"^18.2.15","@types/react-dom":"^18.2.7","@vitejs/plugin-react":"^4.0.3","autoprefixer":"^10.4.14","daisyui":"^3.5.1","eslint":"^8.45.0","eslint-plugin-react":"^7.32.2","eslint-plugin-react-hooks":"^4.6.0","eslint-plugin-react-refresh":"^0.4.3","jest":"^29.6.4","jsdom":"^22.1.0","postcss":"^8.4.27","tailwindcss":"^3.3.3","vite":"^4.4.5","vitest":"^0.34.4"}}
